--- a/chenruijia120/package.json
+++ b/chenruijia120/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "amfe-flexible": "^2.2.1",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.14",
     "vue": "^2.6.14",
@@ -21,6 +22,8 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "postcss": "^8.4.29",
+    "postcss-pxtorem": "^6.0.0",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
